--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,22 +2,24 @@
 name = "tsukimi"
 version = "0.3.0"
 edition = "2021"
-description = "A simple Emby Client with MPV written by GTK4-RS" 
+description = "A simple Emby Client with MPV written by GTK4-RS"
 license = "MIT"
 
 
 [dependencies]
 gtk = { version = "0.8", package = "gtk4", features = ["v4_12"] }
 serde = { version = "1.0.197", features = ["derive"] }
-serde_yaml = "0.9.32"
 serde_json = "1.0.114"
 tokio = { version = "1.36.0", features = ["full"] }
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.12", features = ["json"] }
 async-channel = "2.2.0"
-once_cell = "1.7.2"
 dirs = "5.0.1"
-adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
+adw = { version = "0.6.0", package = "libadwaita", features = [
+    "v1_4",
+] }
 cargo-deb = "2.1.0"
+once_cell = "1.19.0"
+toml = "0.8.12"
 bytefmt = "0.1.7"
 
 [build-dependencies]
@@ -26,7 +28,7 @@ glib-build-tools = "0.19.0"
 [package.metadata.deb]
 maintainer = "Inaha <tsukinaha@tutanota.com>"
 copyright = "2024, Inaha <tsukinaha@tutanota.com>"
-license-file = ["LICENSE","4"]
+license-file = ["LICENSE", "4"]
 extended-description = """\
 A simple Emby Client with MPV \
 Written by GTK4-RS."""
@@ -34,6 +36,25 @@ depends = "$auto"
 section = "utility"
 priority = "optional"
 assets = [
-    ["target/release/tsukimi", "usr/bin/", "755"],
-    ["README.md", "usr/share/doc/tsukimi/README", "644"],
+    [
+        "target/release/tsukimi",
+        "usr/bin/",
+        "755",
+    ],
+    [
+        "README.md",
+        "usr/share/doc/tsukimi/README",
+        "644",
+    ],
 ]
+
+
+[profile.release]
+lto = true
+codegen-units = 1
+opt-level = "s"
+debug = false
+strip = true
+
+[target.x86_64-pc-windows-msvc]
+rustflags = ["-C", "target-feature=+crt-static"]
