--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -1,11 +1,11 @@
 name: feature/win - Linux CI
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - 'feature/win'
-  schedule:
-    - cron: '45 5 * * *'
+  # push:
+  #   branches:
+  #     - 'feature/win'
+  # schedule:
+  #   - cron: '45 5 * * *'
 
 jobs:
   build-release:
