--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -16,11 +16,11 @@ jobs:
       matrix:
         include:
           # x86_64-windows-msvc
-          - arch: x86_64-windows-msvc
-            os: windows-latest
-            target: x86_64-pc-windows-msvc
-            artifact: tsukimi.exe
-            ext: .exe
+          # - arch: x86_64-windows-msvc
+          #   os: windows-latest
+          #   target: x86_64-pc-windows-msvc
+          #   artifact: tsukimi.exe
+          #   ext: .exe
           # x86_64-windows-gnu
           - arch: x86_64-windows-gnu
             os: windows-latest
@@ -34,11 +34,11 @@ jobs:
             artifact: tsukimi
             ext:
           # x86_64-apple-darwin
-          - arch: x86_64-apple-darwin
-            os: macos-latest
-            target: x86_64-apple-darwin
-            artifact: tsukimi
-            ext:
+          # - arch: x86_64-apple-darwin
+          #   os: macos-latest
+          #   target: x86_64-apple-darwin
+          #   artifact: tsukimi
+          #   ext:
 
     runs-on: ${{matrix.os}}
 
@@ -46,23 +46,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Build ${{ matrix.target }}
-        if: ${{ matrix.target == 'x86_64-pc-windows-msvc' }}
-        run: |
-          rustup default stable-msvc
-          py -3.12 -m pip install --user pipx
-          py -3.12 -m pipx ensurepath
-          pipx install gvsbuild
-          $env:Path = "C:\gtk-build\gtk\x64\release\lib\pkgconfig;C:\gtk-build\gtk\x64\release\bin;C:\msys64\usr\bin;C:\msys64\mingw64\bin;C:\msys64\mingw64\lib;C:\msys64\mingw64\include;" + $env:Path
-          $env:LIB = "C:\gtk-build\gtk\x64\release\lib;C:\msys64\mingw64\lib;" + $env:LIB
-          $env:INCLUDE = "C:\gtk-build\gtk\x64\release\include;C:\gtk-build\gtk\x64\release\include\cairo;C:\gtk-build\gtk\x64\release\include\glib-2.0;C:\gtk-build\gtk\x64\release\include\gobject-introspection-1.0;C:\gtk-build\gtk\x64\release\lib\glib-2.0\include;C:\msys64\mingw64\include;" + $env:INCLUDE
-          $env:PKG_CONFIG_PATH = "C:\gtk-build\gtk\x64\release\lib\pkgconfig;" + $env:PKG_CONFIG_PATH
-          gvsbuild build gtk4 libadwaita adwaita-icon-theme
-          cargo build --release --locked --target ${{ matrix.target }}
-          mkdir artifact
-          cp target/${{matrix.target}}/release/${{ matrix.artifact }} artifact/tsukimi-${{ matrix.arch }}${{ matrix.ext }}
-          cp C:\gtk-build\gtk\x64\release\bin\*.dll artifact/
-          compress-archive -path artifact/* -destination artifact/tsukimi-${{matrix.arch}}.zip
+      # - name: Build ${{ matrix.target }}
+      #   if: ${{ matrix.target == 'x86_64-pc-windows-msvc' }}
+      #   run: |
+      #     rustup default stable-msvc
+      #     py -3.12 -m pip install --user pipx
+      #     py -3.12 -m pipx ensurepath
+      #     pipx install gvsbuild
+      #     $env:Path = "C:\gtk-build\gtk\x64\release\lib\pkgconfig;C:\gtk-build\gtk\x64\release\bin;C:\msys64\usr\bin;C:\msys64\mingw64\bin;C:\msys64\mingw64\lib;C:\msys64\mingw64\include;" + $env:Path
+      #     $env:LIB = "C:\gtk-build\gtk\x64\release\lib;C:\msys64\mingw64\lib;" + $env:LIB
+      #     $env:INCLUDE = "C:\gtk-build\gtk\x64\release\include;C:\gtk-build\gtk\x64\release\include\cairo;C:\gtk-build\gtk\x64\release\include\glib-2.0;C:\gtk-build\gtk\x64\release\include\gobject-introspection-1.0;C:\gtk-build\gtk\x64\release\lib\glib-2.0\include;C:\msys64\mingw64\include;" + $env:INCLUDE
+      #     $env:PKG_CONFIG_PATH = "C:\gtk-build\gtk\x64\release\lib\pkgconfig;" + $env:PKG_CONFIG_PATH
+      #     gvsbuild build gtk4 libadwaita adwaita-icon-theme
+      #     cargo build --release --locked --target ${{ matrix.target }}
+      #     mkdir artifact
+      #     cp target/${{matrix.target}}/release/${{ matrix.artifact }} artifact/tsukimi-${{ matrix.arch }}${{ matrix.ext }}
+      #     cp C:\gtk-build\gtk\x64\release\bin\*.dll artifact/
+      #     compress-archive -path artifact/* -destination artifact/tsukimi-${{matrix.arch}}.zip
 
       - name: Build ${{ matrix.target }}
         if: ${{ matrix.target == 'x86_64-pc-windows-gnu' }}
@@ -77,10 +77,20 @@ jobs:
         run: |
           $env:Path = "C:\msys64\mingw64\bin;C:\msys64\mingw64\lib;C:\msys64\mingw64\include;" + $env:Path;
           cargo build --release --locked --target ${{ matrix.target }}
-          mkdir artifact/
-          cp target/${{matrix.target}}/release/${{ matrix.artifact }} artifact/tsukimi-${{ matrix.arch }}${{ matrix.ext }}
-          cp C:/msys64/mingw64/bin/*.dll artifact
-          compress-archive -path artifact/* -destination artifact/tsukimi-${{matrix.arch}}.zip
+          mkdir artifact && cd artifact
+          mkdir tsukimi-windows-gnu-amd64/ && cd tsukimi-windows-gnu-amd64/ && mkdir bin/ && mkdir share/ && mkdir lib/
+          cp ../../target/${{matrix.target}}/release/${{ matrix.artifact }} bin/
+          cp C:/msys64/mingw64/bin/*.dll bin/
+          cp -recurse C:/msys64/mingw64/lib/gdk-pixbuf-2.0 lib/
+          remove-item lib/gdk-pixbuf-2.0/2.10.0/loaders/* -exclude "*svg.dll"
+          cp -recurse C:/msys64/mingw64/share/glib-2.0 share/
+          get-childitem -recurse -path share/glib-2.0/* -exclude "*gschemas.compiled*"|remove-item -recurse
+          cp -recurse C:/msys64/mingw64/share/icons share/
+          remove-item -recurse share/icons/hicolor && remove-item -recurse share/icons/Adwaita/scalable && remove-item -recurse share/icons/Adwaita/cursors
+          remove-item -recurse share/icons/Adwaita/16x16 && remove-item -recurse share/icons/Adwaita/symbolic-up-to-32
+          gci -directory -recurse .|where-object {$_.getfilesysteminfos().count -eq 0}|remove-item -recurse 
+          cd ..
+          compress-archive -path ./* -destinationpath ./tsukimi-${{matrix.arch}}.zip
 
       - name: Build ${{matrix.target}}
         if: ${{matrix.target == 'x86_64-unknown-linux-gnu'}}
@@ -92,17 +102,17 @@ jobs:
           cd artifact
           tar -czf tsukimi-${{matrix.arch}}.tar.gz tsukimi
 
-      - name: Build ${{matrix.target}}
-        if: ${{matrix.target == 'x86_64-apple-darwin'}}
-        run: |
-          brew install gtk4
-          brew install libadwaita
-          rustup target add ${{matrix.target}}
-          cargo build --release --locked --target ${{matrix.target}}
-          mkdir artifact
-          cp target/${{matrix.target}}/release/${{matrix.artifact}} artifact/
-          cd artifact/
-          tar -czf tsukimi-${{matrix.arch}}.tar.gz ./*
+      # - name: Build ${{matrix.target}}
+      #   if: ${{matrix.target == 'x86_64-apple-darwin'}}
+      #   run: |
+      #     brew install gtk4
+      #     brew install libadwaita
+      #     rustup target add ${{matrix.target}}
+      #     cargo build --release --locked --target ${{matrix.target}}
+      #     mkdir artifact
+      #     cp target/${{matrix.target}}/release/${{matrix.artifact}} artifact/
+      #     cd artifact/
+      #     tar -czf tsukimi-${{matrix.arch}}.tar.gz ./*
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -128,23 +138,23 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v4
  
-      - name: Package MacOS x86_64
-        run: |
-          tar -xzf tsukimi-x86_64-apple-darwin/tsukimi-x86_64-apple-darwin.tar.gz
-          mkdir -p Tsukimi.app/Contents/MacOS
-          mkdir -p Tsukimi.app/Contents/Resources
-          cp share/macos/Info.plist Tsukimi.app/Contents/
-          cp share/macos/AppIcon.icns Tsukimi.app/Contents/Resources/
-          mv tsukimi Tsukimi.app/Contents/MacOS/
-          tar -czf tsukimi-x86_64-apple-darwin.tar.gz Tsukimi.app/
+      # - name: Package MacOS x86_64
+      #   run: |
+      #     tar -xzf tsukimi-x86_64-apple-darwin/tsukimi-x86_64-apple-darwin.tar.gz
+      #     mkdir -p Tsukimi.app/Contents/MacOS
+      #     mkdir -p Tsukimi.app/Contents/Resources
+      #     cp share/macos/Info.plist Tsukimi.app/Contents/
+      #     cp share/macos/AppIcon.icns Tsukimi.app/Contents/Resources/
+      #     mv tsukimi Tsukimi.app/Contents/MacOS/
+      #     tar -czf tsukimi-x86_64-apple-darwin.tar.gz Tsukimi.app/
 
       - name: Package Windows GNU
         run: |
           mv tsukimi-x86_64-windows-gnu/*.zip .
 
-      - name: Package Windows MSVC
-        run: |
-          mv tsukimi-x86_64-windows-msvc/*.zip .
+      # - name: Package Windows MSVC
+      #   run: |
+      #     mv tsukimi-x86_64-windows-msvc/*.zip .
 
       - name: Package Linux GNU
         run: |
