--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,28 +2,29 @@
 name = "tsukimi"
 version = "0.3.0"
 edition = "2021"
-description = "A simple Emby Client with MPV written by GTK4-RS" 
+description = "A simple Emby Client with MPV written by GTK4-RS"
 license = "MIT"
 
 
 [dependencies]
 gtk = { version = "0.8", package = "gtk4", features = ["v4_12"] }
 serde = { version = "1.0.197", features = ["derive"] }
-serde_yaml = "0.9.32"
 serde_json = "1.0.115"
 tokio = { version = "1.37.0", features = ["full"] }
 reqwest = { version = "0.12", features = ["json"] }
 async-channel = "2.2.0"
 once_cell = "1.19.0"
 dirs = "5.0.1"
-adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
-cargo-deb = "2.1.0"
+adw = { version = "0.6.0", package = "libadwaita", features = [
+    "v1_4",
+] }
 bytefmt = "0.1.7"
-libmpv = { path = "libmpv-rs", version = "2.0.1"}
+libmpv = { path = "libmpv-rs", version = "2.0.1" }
 libmpv-sys = "3.1.0"
 crossbeam = "0.8.4"
 libc = "0.2.153"
 uuid = { version = "1.8.0", features = ["v4"] }
+toml = "0.8.12"
 
 [build-dependencies]
 glib-build-tools = "0.19.0"
@@ -32,19 +33,13 @@ glib-build-tools = "0.19.0"
 default = ["protocols", "render"]
 protocols = [] # Enable custom protocol callbacks
 render = [] # Enable custom rendering
-build_libmpv = [] # build libmpv automatically, provided MPV_SOURCE is set
+build_libmpv = [
+] # build libmpv automatically, provided MPV_SOURCE is set
 
-[package.metadata.deb]
-maintainer = "Inaha <tsukimi@tutanota.com>"
-copyright = "2024, Inaha <tsukimi@tutanota.com>"
-license-file = ["LICENSE","4"]
-extended-description = """\
-A simple Emby Client with MPV \
-Written by GTK4-RS."""
-depends = "$auto"
-section = "utility"
-priority = "optional"
-assets = [
-    ["target/release/tsukimi", "usr/bin/", "755"],
-    ["README.md", "usr/share/doc/tsukimi/README", "644"],
-]
+
+[profile.release]
+lto = true
+codegen-units = 1
+opt-level = "s"
+debug = false
+strip = true
