CI: add 7z package

--- a/.github/workflows/CI_testing.yml
+++ b/.github/workflows/CI_testing.yml
@@ -55,11 +55,14 @@ jobs:
           remove-item -recurse share/icons/Adwaita/16x16 && remove-item -recurse share/icons/Adwaita/symbolic-up-to-32
           gci -directory -recurse .|where-object {$_.getfilesysteminfos().count -eq 0}|remove-item -recurse 
           compress-archive -path ./* -destinationpath ../tsukimi-${{matrix.arch}}.zip
+          7z.exe a ../tsukimi-${{matrix.arch}}.7z ./*
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: tsukimi-${{matrix.arch}}
-          path: artifact/*.zip
+          path: |
+            artifact/*.zip
+            artifact/*.7z
           compression-level: 5
           retention-days: 3
