--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -55,6 +55,7 @@ jobs:
           remove-item -recurse share/icons/Adwaita/16x16 && remove-item -recurse share/icons/Adwaita/symbolic-up-to-32
           gci -directory -recurse .|where-object {$_.getfilesysteminfos().count -eq 0}|remove-item -recurse 
           compress-archive -path ./* -destinationpath ../tsukimi-${{matrix.arch}}.zip
+          7z.exe a ../tsukimi-${{matrix.arch}}.7z ./*
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -62,6 +63,7 @@ jobs:
           name: tsukimi-${{matrix.arch}}
           path: |
             artifact/tsukimi-*.zip
+            artifact/tsukimi-*.7z
           compression-level: 5
           retention-days: 3
 
@@ -81,10 +83,12 @@ jobs:
       - name: Package Windows GNU
         run: |
           mv tsukimi-x86_64-windows-gnu/*.zip .
+          mv tsukimi-x86_64-windows-gnu/*.7z .
 
       - name: Calculate hash
         run: |
           sha512sum *.zip > tsukimi.sha512sum
+          sha512sum *.7z > tsukimi-7z.sha512sum
 
       - name: Get latest tag name
         run: echo "TAG_NAME=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
@@ -96,5 +100,6 @@ jobs:
         with:
           files: |
             *.zip
-            tsukimi.sha512sum
+            *.7z
+            *.sha512sum
           tag_name: ${{ env.TAG_NAME }}
