CI: build with latest libmpv weekly

--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -1,15 +1,19 @@
-name: feature/win - Windows GNU CI
+name: feature/win - Windows weekly build
 on:
   workflow_dispatch:
+  push:
+    tags:
+      - v*-win
+  schedule:
+    - cron: '14 10 * * 0'
 
 env:
   CARGO_TERM_COLOR: always
   CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
+  RUST_BACKTRACE: full
 
 jobs:
-  build-release:
-    env:
-      RUST_BACKTRACE: full
+  build:
     strategy:
       matrix:
         include:
@@ -31,6 +35,16 @@ jobs:
           C:\msys64\usr\bin\pacman.exe -S --needed --noconfirm mingw-w64-x86_64-gtk4 mingw-w64-x86_64-pkgconf mingw-w64-x86_64-gcc mingw-w64-x86_64-libadwaita mingw-w64-x86_64-mpv
           C:\msys64\usr\bin\pacman.exe -Syu --noconfirm
 
+      - name: Install latest libmpv-dev
+        run: |
+          mkdir mpv_dev && cd mpv_dev
+          . ../scripts/get_latest_mpv.ps1
+          Get-Latest-Mpv
+          mv -force libmpv.dll.a c:/msys64/mingw64/lib
+          mv -force libmpv-2.dll c:/msys64/mingw64/bin
+          mv -force include/mpv/*.h c:/msys64/mingw64/include/mpv/
+          cd ..
+
       - name: Build ${{ matrix.target }}
         run: |
           $env:Path = "C:\msys64\mingw64\bin;C:\msys64\mingw64\lib;C:\msys64\mingw64\include;" + $env:Path;
@@ -51,7 +65,6 @@ jobs:
           remove-item -recurse share/icons/hicolor && remove-item -recurse share/icons/Adwaita/scalable && remove-item -recurse share/icons/Adwaita/cursors
           remove-item -recurse share/icons/Adwaita/16x16 && remove-item -recurse share/icons/Adwaita/symbolic-up-to-32
           gci -directory -recurse .|where-object {$_.getfilesysteminfos().count -eq 0}|remove-item -recurse 
-          compress-archive -path ./* -destinationpath ../tsukimi-${{matrix.arch}}.zip
           7z.exe a ../tsukimi-${{matrix.arch}}.7z ./*
 
       - name: Upload artifact
@@ -59,7 +72,40 @@ jobs:
         with:
           name: tsukimi-${{matrix.arch}}
           path: |
-            artifact/*.zip
             artifact/*.7z
           compression-level: 5
           retention-days: 3
+
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+ 
+      - name: Package Windows GNU
+        run: |
+          mv tsukimi-x86_64-windows-gnu/*.7z .
+
+      - name: Calculate hash
+        run: |
+          sha512sum *.7z > tsukimi.sha512sum
+
+      - name: Set date as tag
+        run: echo "TAG_NAME=windows-weekly-$(date --rfc-3339='date')" >> $GITHUB_ENV
+
+      - name: Upload Github Assets
+        uses: softprops/action-gh-release@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          files: |
+            *.7z
+            *.sha512sum
+          tag_name: ${{ env.TAG_NAME }}
