--- a/.github/workflows/CI_testing.yml
+++ b/.github/workflows/CI_testing.yml
@@ -1,6 +1,7 @@
 name: feature/win - Windows GNU CI
 on:
   workflow_dispatch:
+  push:
 
 env:
   CARGO_TERM_COLOR: always
@@ -22,9 +23,11 @@ jobs:
 
     steps:
       - name: Checkout
+        if: ${{ !startsWith(github.ref, 'refs/tags/') }}
         uses: actions/checkout@v4
 
       - name: Install dependencies
+        if: ${{ !startsWith(github.ref, 'refs/tags/') }}
         run: |
           rustup toolchain install stable-gnu
           rustup default stable-gnu
@@ -32,6 +35,7 @@ jobs:
           C:\msys64\usr\bin\pacman.exe -Syu --noconfirm
 
       - name: Build ${{ matrix.target }}
+        if: ${{ !startsWith(github.ref, 'refs/tags/') }}
         run: |
           $env:Path = "C:\msys64\mingw64\bin;C:\msys64\mingw64\lib;C:\msys64\mingw64\include;" + $env:Path;
           cargo build --release --locked
@@ -51,15 +55,13 @@ jobs:
           remove-item -recurse share/icons/hicolor && remove-item -recurse share/icons/Adwaita/scalable && remove-item -recurse share/icons/Adwaita/cursors
           remove-item -recurse share/icons/Adwaita/16x16 && remove-item -recurse share/icons/Adwaita/symbolic-up-to-32
           gci -directory -recurse .|where-object {$_.getfilesysteminfos().count -eq 0}|remove-item -recurse 
-          compress-archive -path ./* -destinationpath ../tsukimi-${{matrix.arch}}.zip
-          7z.exe a ../tsukimi-${{matrix.arch}}.7z ./*
 
       - name: Upload artifact
+        if: ${{ !startsWith(github.ref, 'refs/tags/') }}
         uses: actions/upload-artifact@v4
         with:
           name: tsukimi-${{matrix.arch}}
           path: |
-            artifact/*.zip
-            artifact/*.7z
+            artifact/*
           compression-level: 5
           retention-days: 3
